--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="RightSide">
-            <p class="storage">you've used <span>815 GB </span>of your storage</p>
+            <h1 class="storage">You've used <span>815 GB </span>of your storage</h1>
             <div class="Range">
                 <div class="SubRange"></div>
                 <p class="top"> 185 <span>GB LEFT</span></p>
